chore: add default img background color

--- a/css/extended/custom_css1.css
+++ b/css/extended/custom_css1.css
@@ -6,6 +6,10 @@ article.first-entry {
   min-height: auto;
 }
 
+img {
+  background-color: #fffaf0;
+}
+
 .post-content hr {
   --hr-dots-number: 3;
   display: block;
