chore: set min-width on img of listed post

--- a/css/extended/custom_css1.css
+++ b/css/extended/custom_css1.css
@@ -28,6 +28,7 @@ img {
 }
 .post-entry .entry-cover {
   max-width: 150px;
+  min-width: 80px;
   margin: 0 !important;
 }
 .post-entry .entry-cover img {
